<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!-- FRAGMENTY (UI) -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_vademecum_frag"
        android:name="com.example.myapplication.VademecumActivity"
        android:label="Vademecum"
        tools:layout="@layout/fragment_vademecum" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.myapplication.UckMapFragment"
        android:label="Mapa UCK"
        tools:layout="@layout/fragment_uck_map" />

    <!-- AKTYWNOŚCI (EKRANY GŁÓWNE) -->
    <activity
        android:id="@+id/nav_calendar"
        android:name="com.example.myapplication.CalendarActivity"
        android:label="Kalendarz"
        tools:layout="@layout/fragment_calendar" />

    <activity
        android:id="@+id/nav_diary"
        android:name="com.example.myapplication.DiaryActivity"
        android:label="Dzienniczek"
        tools:layout="@layout/activity_diary" />

    <activity
        android:id="@+id/nav_medications"
        android:name="com.example.myapplication.MedicationActivity"
        android:label="Leki"
        tools:layout="@layout/activity_medications" />

    <activity
        android:id="@+id/nav_contact"
        android:name="com.example.myapplication.ContactActivity"
        android:label="Kontakt"
        tools:layout="@layout/activity_contact" />

</navigation>
